# miku-on-desktop

./: .gitignore  README.md  pyproject.toml
assets/pets/man/: pet.json  voice.json
assets/pets/miku_pixel/: pet.json  voice.json
assets/pets/san_pixel/: pet.json
assets/pets/tew/: pet.json
assets/pets/xff/: pet.json  voice.json
deploy/: miku-kiosk.service
scripts/: generate_pet_sprites.py  install-kiosk-direct-render.sh  restore-desktop.sh
src/miku_on_desk/: __init__.py  character_generation.py  cli.py  kiosk_main.py  main.py
src/miku_on_desk/brain/: backoff.py  loop.py  mcp_automation.py  model_router.py  proactive.py  provider_factory.py  reading_script.py  tracing.py
src/miku_on_desk/bridge/: events.py
src/miku_on_desk/config/: __init__.py  logging_config.py  settings.py
src/miku_on_desk/face/: character_generation_worker.py  character_voice.py  pet_motion.py  pet_state.py  reading_script_worker.py  relationship_store.py  sprite_sheet.py  stt_worker.py  voice_clone_worker.py
src/miku_on_desk/web/: forms.py  (+1 more)
tests/: conftest.py  test_character_generation.py  test_cli.py  test_generate_pet_sprites.py  test_kiosk_main.py  test_main.py
tests/brain/: test_loop.py  test_mcp_automation.py  test_model_router.py  test_proactive.py  test_provider_factory.py  test_reading_script.py  test_tracing.py
tests/bridge/: test_events.py
tests/config/: test_logging_config.py  test_settings.py
tests/eval/: assertions.py  conftest.py  judge.py  test_llm_judge_gate.py
tests/face/: test_audio_capture.py  test_capture_widgets.py  test_character_clone_dialog.py  test_character_creation_dialog.py  test_character_gallery.py  test_character_generation_worker.py  test_character_voice.py  test_chat_popup.py  test_chat_popup_voice_input.py  test_global_hotkeys.py  test_kiosk_settings_panel.py  test_memory_panel.py  test_overlay_window.py  test_pet_motion.py  test_pet_state.py  test_radial_menu.py  test_reading_recording_step.py  test_reading_script_worker.py  test_recollection_gallery.py  test_relationship_store.py  test_rotated_container.py  test_settings_panel.py  test_speech_bubble.py  test_speech_controller.py  test_sprite_sheet.py  test_sprite_widget.py  test_stt_worker.py  test_theme.py  test_visitor_overlay.py  test_voice_change_dialog.py  test_voice_clone_worker.py
tests/hands_eyes/: manual_macos_calculator_check.py  manual_macos_idle_foreground_check.py  test_backend.py  test_capture.py  test_input_injector.py  test_vision_fallback.py
tests/hardware/: test_video.py
tests/support/: loop_fixtures.py
tests/web/: test_forms.py  test_settings_server.py
(+144 files in other folders)
