[project]
name = "miku-on-desk"
version = "0.1.0"
description = "初音未来桌面宠物 AI Agent"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "tew" },
]

dependencies = [
    # LLM Provider SDK
    "anthropic>=0.72",
    "openai>=2.5",
    "google-genai>=2.10",
    # UI / 渲染
    "pyside6>=6.11",
    "pyside6-fluent-widgets>=1.9",
    "numpy>=2.2",
    "pillow>=12.1",
    # 本机 OS 集成
    "pynput>=1.8.2",
    "mss>=10.1",
    # 数据模型 / 配置 / 日志
    "pydantic>=2.9",
    "pydantic-settings>=2.14",
    "platformdirs>=4.10",
    # Skills（Markdown + YAML frontmatter）
    "python-frontmatter>=1.3",
    "pyyaml>=6.0.3",
    "watchfiles>=1.2",
    # MCP host
    "mcp>=1.2",
    "cryptography>=49.0.0",
    "agent-client-protocol>=0.10.1",
    "psutil>=7.2.2",
    "pyperclip>=1.11.0",
    # TTS（文字转语音）：edge-tts 调微软 Edge 在线语音，免 Key、离线不可用；
    # elevenlabs 官方 SDK 用于 ElevenLabs 引擎（OpenAI 兼容引擎复用 openai SDK）
    "edge-tts>=7.0.0",
    "elevenlabs>=2.0",
]

[project.optional-dependencies]
windows = [
    "uiautomation>=2.0.29 ; sys_platform == 'win32'",
]
macos = [
    "pyobjc-framework-ApplicationServices>=12.2.1 ; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=12.2.1 ; sys_platform == 'darwin'",
]

[dependency-groups]
dev = [
    "ruff>=0.15",
    "mypy>=2.1",
    "pytest>=9.1",
    "pytest-asyncio>=1.4",
    "types-pyperclip>=1.11.0.20260508",
    "types-psutil>=7.2.2.20260518",
]

[project.scripts]
miku-on-desk = "miku_on_desk.main:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# RUF001-003 把中文全角标点判定为「易混淆字符」，与项目强制使用中文注释的要求冲突，关闭。
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
show_error_codes = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
# pyobjc（ApplicationServices/AppKit/Quartz）、pynput、qfluentwidgets 均未提供 py.typed；
# uiautomation 是 Windows 专属依赖，在其他平台的开发机上不会被安装，mypy 解析不到也是预期行为。
module = [
    "ApplicationServices.*",
    "AppKit.*",
    "Quartz.*",
    "pynput.*",
    "uiautomation.*",
    "qfluentwidgets.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "eval_regression: 从真实生产失败转化出的具体回归 case，必须始终为绿",
    "eval_capability: 验证某类 agent 行为准则的正向能力用例",
    "eval_llm_judge: 依赖真实 LLM 调用打分，无 API key 时显式 skip",
]
